Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7197

advapi32: avicap32: fix missing allocation checks, and incorrect free calls

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • None
    • RosDlls

    Description

      There are a number of places in advapi32 and avicap32 where allocations are performed and the returned pointers are not checked before use. There are also a number of places in advapi32 where resources are freed unconditionally, without checking whether the alloc calls failed.

      Attachments

        Activity

          People

            bug zilla Bug Zilla
            andygui andygui
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: