advapi32: avicap32: fix missing allocation checks, and incorrect free calls by andygui CORE-7197 #resolve #comment Committed in revision r59243, thanks for help

svn path=/trunk/; revision=59244